syntax = "proto3";

option go_package = ".;pb";

package pb;

message ReqOp {
	oneof one {
		string echo = 1;
	}
}
